devops/terraforms/azure/modules/infrastructures/manifests/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: ${argocd_namespace}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - "argo-cd.ohmydev.asia"
      secretName: cd-ohmydev-asia-tls
  rules:
    - host: "argo-cd.ohmydev.asia"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "argo-cd-argocd-server"
                port:
                  number: 443
